package it.unisa.diem.softeng.librarymanager.model;

public enum StatoPrestitoEnum {
    ATTIVO,
    NON_ATTIVO,
    IN_SCADENZA,
    SCADUTO
}
