@startuml
interface it.unisa.diem.softeng.librarymanager.managers.Gestore {
~ void add(T)
~ void remove(T)
~ ObservableList<T> getLista()
~ void ordinaLista(Comparator<T>)
~ void salvaLista(String)
}

class it.unisa.diem.softeng.librarymanager.model.Utente {
~ String nome
~ String cognome
~ String matricola
~ String email
+ <<Create>> Utente(String,String,String,String)
+ String getMatricola()
+ String getCognome()
+ String getEmail()
+ String getNome()
+ void setNome(String)
+ void setCognome(String)
+ void setMatricola(String)
+ void setEmail(String)
+ String toString()
+ boolean equals(Object)
+ int compareTo(Utente)
}


class it.unisa.diem.softeng.librarymanager.comparators.CognomeUtenteComparator {
+ int compare(Utente,Utente)
}

class it.unisa.diem.softeng.librarymanager.controllers.PrincipaleController {
- GestorePrestito gestorePrestito
- GestoreUtente gestoreUtente
- GestoreLibro gestoreLibro
- Gestore<?> gestoreCorrente
- AreaController areaCorrente
- boolean menuVisible
- AnchorPane mainContent
- Button menuButton
- VBox sideMenu
- Button addBtn
- Button removeBtn
- Button modifyButton
- TableView<?> tabella
- Button areaLibriBtn
- Button areaPrestitiBtn
- Button areaUtentiBtn
- Label areaLbl
- Button apriFileBtn
- Button salvaConNomeBtn
- Button salvaFileBtn
- MenuButton ordineFiltro
+ void initialize()
- void toggleMenu()
+ void setArea(AreaController)
+ void setAreaPrestiti(ActionEvent)
+ void setAreaLibri(ActionEvent)
+ void setAreaUtenti(ActionEvent)
+ void salvaFile(ActionEvent)
+ void salvaConNome(ActionEvent)
+ void apriFile(ActionEvent)
+ void ordineTabella(ActionEvent)
}


class it.unisa.diem.softeng.librarymanager.controllers.UtenteController {
- GestoreUtente gestore
- Map<String,Comparator<Utente>> mappaOrdinamento
- FilteredList<Utente> listaFiltrata
- SortedList<Utente> listaOrdinata
- TextField nomeFld
- TextField cognomeFld
- Button salvaBtn
- Button annullaBtn
- TextField matricolaFld
- TextField emailFld
+ <<Create>> UtenteController(GestoreUtente)
+ void onRemove()
+ void onAdd()
+ void onEdit(TableView<?>)
+ void setTableView(TableView<?>)
+ void filtraTabella(String)
+ List<String> getCriteriOrdinamento()
+ void ordina(String)
}


interface it.unisa.diem.softeng.librarymanager.controllers.AreaController {
~ void onRemove()
~ void onAdd()
~ void onEdit(TableView<?>)
~ void setTableView(TableView<?>)
~ void filtraTabella(String)
~ List<String> getCriteriOrdinamento()
~ void ordina(String)
}

class it.unisa.diem.softeng.librarymanager.comparators.AutoreLibroComparator {
+ int compare(Libro,Libro)
}

class it.unisa.diem.softeng.librarymanager.controllers.LibroController {
- GestoreLibro gestore
- Map<String,Comparator<Libro>> mappaComparatori
- FilteredList<Utente> listaFiltrata
- SortedList<Utente> listaOrdinata
- AnchorPane insertBookContent
- TextField annoFld
- TextField titoloFld
- TextField autoreFld
- Button salvaLibroBtn
- TextField copieDisponibiliFld
- TextField isbnFld
- TextField copieTotaliFld
- Button annullaBtn
+ <<Create>> LibroController(GestoreLibro)
+ void onRemove()
+ void onAdd()
+ void onEdit(TableView<?>)
+ void setTableView(TableView<?>)
+ void filtraTabella(String)
+ List<String> getCriteriOrdinamento()
+ void ordina(String)
}


class it.unisa.diem.softeng.librarymanager.model.Libro {
~ String titolo
~ String autore
~ int anno
~ String isbn
~ int copieTotali
~ int copieDisponibili
+ <<Create>> Libro(String,String,int,String,int)
+ String getTitolo()
+ int getAnno()
+ String getAutore()
+ String getIsbn()
+ int getCopieTotali()
+ int getCopieDisponibili()
+ void setTitolo(String)
+ void setAutore(String)
+ void setIsbn(String)
+ void setCopieTotali(int)
+ void setCopieDisponibili(int)
+ void incrementaCopie()
+ void decrementaCopie()
+ String toString()
+ boolean equals(Object)
+ int compareTo(Libro)
}


class it.unisa.diem.softeng.librarymanager.comparators.AnnoLibroComparator {
+ int compare(Libro,Libro)
}

class it.unisa.diem.softeng.librarymanager.managers.GestorePrestito {
- ObservableList<Prestito> prestitoList
+ <<Create>> GestorePrestito()
+ void add(Prestito)
+ void remove(Prestito)
+ ObservableList<Prestito> getLista()
+ void ordinaLista(Comparator<Prestito>)
+ Predicate<Prestito> getPredicatoPrestito(String)
+ void salvaLista(String)
+ {static} GestorePrestito caricaListaPrestiti(String)
}


class it.unisa.diem.softeng.librarymanager.model.Prestito {
- Utente utente
- Libro libro
- LocalDate dataInizio
- LocalDate dataFine
- StatoPrestitoEnum stato
+ <<Create>> Prestito(Utente,Libro,LocalDate,LocalDate)
+ Utente getUtente()
+ Libro getLibro()
+ LocalDate getDataInizio()
+ LocalDate getDataFine()
+ StatoPrestitoEnum getStato()
+ void setUtente(Utente)
+ void setLibro(Libro)
+ void setDataInizio(LocalDate)
+ void setDataFine(LocalDate)
+ String toString()
+ boolean equals(Object)
+ int compareTo(Prestito)
}


class it.unisa.diem.softeng.librarymanager.managers.GestoreUtente {
- ObservableList<Utente> utentiList
+ <<Create>> GestoreUtente()
+ void add(Utente)
+ void remove(Utente)
+ ObservableList<Utente> getLista()
+ void ordinaLista(Comparator<Utente>)
+ void salvaLista(String)
+ Predicate<Utente> getPredicatoUtente(String)
+ {static} GestoreLibro caricaListaUtenti(String)
}


enum it.unisa.diem.softeng.librarymanager.model.StatoPrestitoEnum {
+  ATTIVO
+  NON_ATTIVO
+  IN_SCADENZA
+  SCADUTO
}

class it.unisa.diem.softeng.librarymanager.controllers.PrestitoController {
- GestorePrestito gestore
- FilteredList<Prestito> listaFiltrata
- SortedList<Prestito> listaOrdinata
- TextField statoFld
- ComboBox<String> utentiCb
- TextField dataInizioFld
- Button salvaBtn
- ComboBox<String> libroCb
- TextField dataScadenzaFld
- Button annullaBtn
+ <<Create>> PrestitoController(GestorePrestito)
+ void onRemove()
+ void onAdd()
+ void onEdit(TableView<?>)
+ void setTableView(TableView<?>)
+ void filtraTabella(String)
+ List<String> getCriteriOrdinamento()
+ void ordina(String)
+ void annullaNuovoPrestito(ActionEvent)
+ void salvaNuovoPrestito(ActionEvent)
+ void viewPrestitiLista(ActionEvent)
+ void viewListaPrestiti(ActionEvent)
}


class it.unisa.diem.softeng.librarymanager.libraryManagerApp {
- {static} Scene scene
+ void start(Stage)
~ {static} void setRoot(String)
- {static} Parent loadFXML(String)
+ {static} void main(String[])
}


class it.unisa.diem.softeng.librarymanager.managers.GestoreLibro {
- ObservableList<Libro> listaLibri
+ <<Create>> GestoreLibro()
+ void add(Libro)
+ void remove(Libro)
+ void salvaLista(String)
+ ObservableList<Libro> getLista()
+ void ordinaLista(Comparator<Libro>)
+ Predicate<Libro> getPredicatoLibro(String)
+ {static} GestoreLibro caricaListaLibri(String)
}




it.unisa.diem.softeng.librarymanager.model.Comparable <|.. it.unisa.diem.softeng.librarymanager.model.Utente
java.util.Comparator <|.. it.unisa.diem.softeng.librarymanager.comparators.CognomeUtenteComparator
it.unisa.diem.softeng.librarymanager.controllers.AreaController <|.. it.unisa.diem.softeng.librarymanager.controllers.UtenteController
java.util.Comparator <|.. it.unisa.diem.softeng.librarymanager.comparators.AutoreLibroComparator
it.unisa.diem.softeng.librarymanager.controllers.AreaController <|.. it.unisa.diem.softeng.librarymanager.controllers.LibroController
it.unisa.diem.softeng.librarymanager.model.Comparable <|.. it.unisa.diem.softeng.librarymanager.model.Libro
java.util.Comparator <|.. it.unisa.diem.softeng.librarymanager.comparators.AnnoLibroComparator
it.unisa.diem.softeng.librarymanager.managers.Gestore <|.. it.unisa.diem.softeng.librarymanager.managers.GestorePrestito
it.unisa.diem.softeng.librarymanager.model.Comparable <|.. it.unisa.diem.softeng.librarymanager.model.Prestito
it.unisa.diem.softeng.librarymanager.managers.Gestore <|.. it.unisa.diem.softeng.librarymanager.managers.GestoreUtente
it.unisa.diem.softeng.librarymanager.controllers.AreaController <|.. it.unisa.diem.softeng.librarymanager.controllers.PrestitoController
javafx.application.Application <|-- it.unisa.diem.softeng.librarymanager.libraryManagerApp
it.unisa.diem.softeng.librarymanager.managers.Gestore <|.. it.unisa.diem.softeng.librarymanager.managers.GestoreLibro
@enduml